welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run(){
^PatternPicture:1: error: expected start of definition
override def run(){
         ^PatternPicture:8: error: expected class or object definition
def faireligne(){
^PatternPicture:23: error: expected class or object definition
def marque(){
^PatternPicture:28: error: expected class or object definition
def faireD(x : Int, sens : Boolean){
^