welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run(){
  for (j <- 1 to 3){
  	faireligne()
  }
}


def faireligne(){
	for (k<- 1 to 3){
  	faire4V()
    avance(5) 
    
  }
  
  gauche()
  avance(5)
  droite()
  
}



def marque(){
  baisseBrosse()
	leveBrosse()
}

def faireD(x : Int, sens : Boolean){
  x match {
    case 1 => setCouleurBrosse(Color.yellow)
    case 2 => setCouleurBrosse(Color.red)
    case 3 => setCouleurBrosse(Color.blue)
    case 4 => setCouleurBrosse(Color.green)
    
  }
  if(sens){
	avance()
	marque()
	gauche()
	avance()
	gauche()
	    
  avance()
  marque()
	gauche()
	avance()
	gauche()
	
  }else{
  
  marque()
  avance()
  gauche()
  avance()
  gauche()
    
  marque()
  avance()
  gauche()
  avance()
  gauche()

}

def faireV(){
  for (i <- 1 to 2){
    faireD(sens=true)
    faireD(sens=false)
  }
  recule(2)
}


def fairecarre(){
  gauche()
  avance()
  avance()
  droite()
	for(i <- 1 to 4){
	   faireV(i)
     gauche()
     avance()
     avance()
     droite()
  
	}
}